syntax = "proto3";
package pb;
option go_package = "internal/pb";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest{
    string name = 1;
    string email = 2;
}

message UserResponse{
    User user =1;
}

service UserService {
rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
}